--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.3.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "fastify": "^4.25.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
