--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,23 +6,27 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
+    "target": "es2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "src",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": true,
     "strict": true,
+    "strictNullChecks": false,
+    "resolveJsonModule": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
+    "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "resolveJsonModule": true,
+    "rootDirs": [
+      "src",
+      "tests"
+    ],
     "paths": {
-      "@application/*": ["./src/application/*"],
-      "@infra/*": ["./src/infra/*"],
-      "@test/*": ["./test/*"]
-    }
+      "~/": [""],
+      "~test/": ["../test/"]
+    },
   }
 }
