--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,17 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+.env
+
+.docker/
+ormconfig.json
+output/
+
+.npm-cache/
+.npm
+data-postgres
+.cache
+
+_cacache
+.dist
