--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
       "tests"
     ],
     "paths": {
-      "~/": [""],
-      "~test/": ["../test/"]
+      "~/*": ["*"],
+      "~test/*": ["../test/*"]
     },
   }
 }
