--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: "3.7"
 
 services:
-  new_portal_api:
-    container_name: new_portal_api
-    build: .
-    ports:
-      - 3333:3333
-    depends_on:
-      - news_portal_db
-    environment:
-      WAIT_HOSTS: news_portal_db:5432
-    volumes:
-      - .:/usr/src/app
-    links:
-      - news_portal_db
+  # news_portal_api:
+  #   container_name: news_portal_api
+  #   build: .
+  #   ports:
+  #     - 3333:3333
+  #   depends_on:
+  #     - news_portal_db
+  #   environment:
+  #     WAIT_HOSTS: news_portal_db:5432
+  #   volumes:
+  #     - .:/usr/src/app
+  #   links:
+  #     - news_portal_db
 
   news_portal_db:
     container_name: news_portal_db
@@ -24,3 +24,9 @@ services:
       - 5432:5432
     volumes:
       - ./data-postgres:/var/lib/postgresql/data
+
+  redis:
+    container_name: cache
+    image: redis
+    ports:
+      - 6379:63790.0.0.0
